--- a/bio1.html
+++ b/bio1.html
@@ -11,7 +11,7 @@
     <h1>My Bio-Data</h1>
     <div class="pin">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index1.html">Home</a></li>
             <li><a href="resume1.html">Resume</a></li>
             <li><a href="bio1.html">Bio-data</a></li>
         </ul>
